# FEM-Homework

./: 2DMaterial.h  C3D8R.h  C3D8RMaterial.h  ElementGroup.h  Outputter.h  Q4.h  Q8.h  README.md  T3.h
convergence_analysis/Plate/: 16x16.txt  32x32.txt
convergence_and_patch_analysis/Plate/: 4x4.txt  8x8.txt  convergence_plate.py
cpp/: C3D8.cpp  Outputter.cpp
data/Plate_data/: divide.py
h/: C3D8Material.h  Outputter.h
src/: CMakeLists.txt
src/cpp/: 2DMaterial.cpp  B31.cpp  B31Material.cpp  Bar.cpp  C3D8.cpp  C3D8Material.cpp  C3D8R.cpp  C3D8RMaterial.cpp  CKirchhoffPlate.cpp  Domain.cpp  ElementGroup.cpp  Node.cpp  Outputter.cpp  PlateMaterial.cpp  Q4.cpp  Q8.cpp  T3.cpp  main.cpp
src/h/: 2DMaterial.h  B31.h  B31Material.h  Bar.h  C3D8.h  C3D8R.h  C3D8RMaterial.h  CKirchhoffPlate.h  Domain.h  Element.h  ElementGroup.h  Material.h  Node.h  Outputter.h  PlateMaterial.h  Q4.h  Q8.h  SkylineMatrix.h  T3.h
